--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,10 @@
 body {
     grid-template-rows: 1fr auto;
     grid-template-areas: "main" "footer";
-    overflow-x: hidden;
     background: #f4623a;
     min-height: 100vh;
     font-family: 'Open Sans', sans-serif;
+    
   }
   body .footer {
     z-index: 1;
@@ -13,6 +13,7 @@ body {
     position: relative;
     grid-area: footer;
     min-height: 12rem;
+    
   }
   body .footer .bubbles {
     position: absolute;
